= Changelog

:base: https://github.com/DAG-OS/ansible-role-miniconda
:v1_0_0: {base}/releases/tag/v1.0.0
:unreleased: {base}/compare/v1.0.0..HEAD

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/en/1.1.0/[Keep a Changelog],
and this project adheres to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== {unreleased}[Unreleased]

This section tracks upcoming changes that are not yet released.

=== Added

* Ansible role for configuring and installing Miniconda.
* Role testing via https://molecule.readthedocs.io/en/latest/[Molecule].