@@ -8,6 +8,7 @@ repos:
       - id: end-of-file-fixer
       - id: check-added-large-files
       - id: check-merge-conflict
+      - id: check-symlinks
       - id: detect-private-key
   - repo: https://github.com/adrienverge/yamllint.git
     rev: v1.26.3
