@@ -1,0 +1,8 @@
+# Ansible role: Miniconda
+
+![CI](https://github.com/DAG-OS/ansible-role-miniconda/actions/workflows/ci.yml/badge.svg?branch=trunk)
+![Release](https://github.com/DAG-OS/ansible-role-miniconda/actions/workflows/release.yml/badge.svg?branch=trunk)
+
+A role for installing and configuring [Miniconda](https://docs.conda.io/en/latest/miniconda.html).
+
+Find the documentation at: <https://dag-os.github.io/pages/dagos.miniconda/trunk>
