@@ -17,3 +17,4 @@ This section tracks upcoming changes that are not yet released.
 
 * Ansible role for configuring and installing Miniconda.
 * Role testing via https://molecule.readthedocs.io/en/latest/[Molecule].
+* Antora based documentation.
